Correct bash command formatting in README

--- a/README.ME
+++ b/README.ME
@@ -57,6 +57,8 @@ gcc main.c -o main
 
 #### 4. Force preload of the library at runtime  
 
-```bash
+````bash
+
 LD_LIBRARY_PATH=$PWD LD_PRELOAD=$PWD/libft_malloc.so ./main
 
+````
